--- a/main.tex
+++ b/main.tex
@@ -113,6 +113,10 @@ maxcitenames=4]{biblatex}
 \label{chp:requirements}
 \input{requirements.tex}
 
+\chapter{Baseline Architecture}
+\label{chp:baseline}
+\input{baseline_arch.tex}
+
 \chapter{Main Use Cases}
 \label{chp:usecases}
 \input{usecases.tex}
