--- a/requirements.tex
+++ b/requirements.tex
@@ -103,7 +103,8 @@ In order to determine the most important key drivers for our system, the stakeho
     	FR-11 & Must & Once a connection between a beacon and a phone is established, the system must send a notification to the user’s phone.\\ 	\hline
 	    FR-12 & Must & Application provides a user interface enabling the user to check his account, update amounts.
         \\	\hline
-	    FR-13 & Must & The beacons register both logged in and not logged in users and match the account with the phone even if the user logs in later on during the journey. \\
+	    FR-13 & Must & The beacons register both logged in and not logged in users and match the account with the phone even if the user logs in later on during the journey. \\ \hline
+      FR-13 & Must & The payment should be secure. \\
 
     \end{tabularx}
     \caption{Functional requirements}
