--- a/baseline_arch.tex
+++ b/baseline_arch.tex
@@ -1,7 +1,8 @@
 %!TEX root = main.tex
-\section{Architectural style}
-
+This chapter will provide information regarding the baseline architectural decisions taken for implementing the Easy Ticketing system. The first section will outline the main tactics used related to the key drivers and section \ref{chp:design_decisions} will describe the main architectural decisions.
+ 
 \section{Tactics}
+This section outlines the tactics used for implementing the three most important quality attributes for the system.
 
 \subsection{Compatibility Tactics}
 
@@ -29,3 +30,7 @@ Data should be protected from unauthorized access. Confidentiality is usually ac
 
 
 \subsection{Reliability Tactics}
+
+\section{Design decisions}
+\label{chp:design_decisions}
+\input{design_decisions.tex}
