--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+
 @misc{web:df,
   title = "Design fundamentals",
   url = "https://msdn.microsoft.com/en-us/library/ee658094.aspx#Scalability",
@@ -78,8 +78,8 @@ urldate = "2017-01-08"
   isbn = {0-201-63361-2},
   publisher = {Addison-Wesley Longman Publishing Co., Inc.},
   address = {Boston, MA, USA},
-}
-=======
+},
+
 @misc{web:beacons,
   title = "Pulsate",
   url = "http://academy.pulsatehq.com/bluetooth-beacons",
@@ -89,5 +89,12 @@ urldate = "2017-01-08"
 @misc{iso,
   title="iso 25010",
   url="http://www.iso.org/iso/catalogue_detail.htm?csnumber=35733",
-  urldate = "2011-03-01"}
->>>>>>> 0c8f020424f5e1dac48d10255234ca8bb9ed9950
+  urldate = "2011-03-01"},
+
+@article{tactics-reliability,
+	title = "Implementing Reliability: the Interaction of 
+	Requirements, Tactics and Architecture Patterns ",
+	date = "2017-01-23",
+	author = "Neil B. Harrison and Paris Avgeriou",
+	url = "http://www.cs.rug.nl/paris/papers/ADSvol7-2010.pdf"
+}
