--- a/patterns.tex
+++ b/patterns.tex
@@ -16,3 +16,15 @@
 
 \input{patterns/trusted_subsystem.tex}
 \label{subchp:trustedP}
+
+% master slave replica
+
+\input{patterns/master_slave.tex}
+\label{subchp:MS-Replication}
+
+
+% data replication
+
+
+\input{patterns/data_replication.tex}
+\label{subchp:DataRep}
