replicated systems+ time tracking

--- a/architecture.tex
+++ b/architecture.tex
@@ -74,4 +74,4 @@ Figure \ref{fig:seqDiagram3} displays the information flow related to use cases 
 Figure \ref{fig:seqDiagram4} shows the main information flow corresponding to the use case "Manually sign out from journey". This use case was designed as an alternative to the main "Disconnect from beacon" use case which will give users the possibility to manually check out at a particular train station in case of the phone to beacon connection not being available.
 
 %\section{Data View}-- what is data view?
-\section{Physical View}
+%\section{Physical View}
