--- a/patterns.tex
+++ b/patterns.tex
@@ -1,5 +1,5 @@
 %!TEX root = main.tex
-
+This chapter aims to present the architectural patterns used for the design of the Easy Ticketing system. For each pattern, the problem and solution space it deals with will be described, as well as the rationale which led to its implementation and the implications it has on different quality aspects of the system.
 
 \input{patterns/layer.tex}
 \label{subchp:layers}
