--- a/time_tracking.tex
+++ b/time_tracking.tex
@@ -1,2 +1,28 @@
 %!TEX root = main.tex
 
+\begin{table}[H]
+	\centering
+	\begin{tabularx}{\textwidth}{p{2cm}|X|p{2.5cm}}
+		\textbf{Member} & \textbf{Task} & \textbf{Time (hrs)} \\
+		\hline
+		ab &  &  \\
+		& & \textbf{} \\
+		\hline
+		ph &  &  \\
+		& & \textbf{} \\
+		\hline
+		am & system scope and context & 10 \\
+		 & functional requirements & 3 \\
+		 & solution strategy & 6 \\
+		 & reliability tactics & 3 \\
+		 & process view & 6 \\
+		 & use cases & 7 \\
+		& & \textbf{35} \\
+		\hline
+		er &  &  \\
+		& & \textbf{} \\
+		\hline
+	\end{tabularx}
+	\caption{Time tracking}
+	\label{tab:timetracking-1}
+\end{table}
