--- a/patterns/layer.tex
+++ b/patterns/layer.tex
@@ -1,10 +1,9 @@
 %!TEX root = ../main.tex
 
 
-\section{Tiered Architecture}
-
+\section{Layered Architecture}
 	
-	The Tiered architecture pattern is based on classes which are designed to work together in a work flow. Having one objective per class creates a modular design which allows for easy change and update of the logic. Each of the classes has one entry and one exit point towards other classes. 
+	The Layered architecture pattern is based on classes which are designed to work together in a work flow. Having one objective per class creates a modular design which allows for easy change and update of the logic. Each of the classes has one entry and one exit point towards other classes. 
 	
 	\subsection{Traceability} 
 		% related requirements
@@ -20,17 +19,17 @@
 
 	\subsection{Solution} 
 
-	Create a tiered architecture where each component is a separate entity capable of existing on its own. This breaking down of logic will allow for easy replacement or updates of components without interfering with any other component. 
+	Create a layered architecture where each component is a separate entity capable of existing on its own. This breaking down of logic will allow for easy replacement or updates of components without interfering with any other component. 
 
-	\subsection{Rationale} \label{tiers:rationale}
+	\subsection{Rationale} \label{Layers:rationale}
 
-	Breaking down the architecture to components provide an impact on the development itself. It is possible to have different teams work and specialise on different components. All the tiers in this architecture are reusable and easily modifiable. 
+	Breaking down the architecture to components provide an impact on the development itself. It is possible to have different teams work and specialise on different components. All the Layers in this architecture are reusable and easily modifiable. 
 
 
 \paragraph{Implications}
 \begin{itemize}
 	\item 
-	An architecture based on a tiered system will have to be designed so that each different component has a defined entry and exit points which should not change at any point during the life cycle of the project. Each change of one of those points would require all other components linked to it to be changed as well and this will increase work effort greatly.
+	An architecture based on a layered system will have to be designed so that each different component has a defined entry and exit points which should not change at any point during the life cycle of the project. Each change of one of those points would require all other components linked to it to be changed as well and this will increase work effort greatly.
 
 	\item Increase Maintainability
 	\item Increase Security
