Design Decisions and Compatibility tactics

--- a/baseline_arch.tex
+++ b/baseline_arch.tex
@@ -5,7 +5,14 @@ This chapter will provide information regarding the baseline architectural decis
 This section outlines the tactics used for implementing the three most important quality attributes for the system.
 
 \subsection{Compatibility Tactics}
+In this section, the tactics to ensure the system's compatibility are presented with a reason behind the use of this particular tactic.
+\begin{itemize}
+\item \textbf{Bluetooth beacons} 
+The use of bluetooth beacons for the system to interact with mobile devices ensures compatibility in a way that bluetooth is available to almost all mobile devices and on top of that, it also takes advantage of backward compatibility so any version of bluetooth on any device will be compatible with the bluetooth version of the beacons.
 
+\item \textbf{Mobile application}
+The implementation of mobile applications for the various selected operating systems that is iOS, Android and Windows ensures the compatibility of the system with almost all mobile devices given that these are the dominant operating systems in the smartphone OS market share according to the International Data Corporation (IDC) \cite{web:IDC}.
+\end{itemize}
 \subsection{Security Tactics}
 
 Below we are briefly describing the security tactics applied for our system.
