--- a/evaluation.tex
+++ b/evaluation.tex
@@ -126,11 +126,13 @@ As a reference for some of the weightings depicted in the table,
 \begin{table}[H]
     \begin{tabularx}{\textwidth}{p{3.5cm}|>{\centering\arraybackslash}X|>{\centering\arraybackslash}X|>{\centering\arraybackslash}X}
     	 & \textbf{Security} & \textbf{Reliability} & \textbf{Compatibility} \\ \hline
-    	\textbf{replicated system}         & /  & +  &  \\ \hline
-    	\textbf{Model View Controller}  & /  & / &   \\ \hline
-    	\textbf{layers}                    & ++ & /  &   \\ \hline
-    	\textbf{trusted subsystem}         & ++ & /  &   \\ \hline
-    	\textbf{master-slave replication}  & /  & ++ &   \\ \hline
+    	\textbf{replicated system}         & /  & +  & + \\ \hline
+    	\textbf{Model View Controller}  & /  & / & /  \\ \hline
+    	\textbf{layers}                    & ++ & /  &  / \\ \hline
+    	\textbf{trusted subsystem}         & ++ & /  &  / \\ \hline
+    	\textbf{master-slave replication}  & /  & ++ & +  \\ \hline
+	\textbf{data replication}  &  / & ++ & /  \\ \hline
+	\textbf{Observer pattern}  &  / & ++ &  / \\ \hline
 	 \textbf{TOTAL} & \textbf{} & \textbf{} & \textbf{} \\
     \end{tabularx}
     \caption{Key driver verification table}
