--- a/main.tex
+++ b/main.tex
@@ -21,6 +21,9 @@ backend=bibtex,
 style=ieee,
 maxbibnames=4,
 maxcitenames=4]{biblatex}
+\makeatletter
+\def\blx@maxline{77}
+\makeatother
 
 \usepackage{csquotes}
 \usepackage[nottoc]{tocbibind}
