--- a/references.bib
+++ b/references.bib
@@ -11,6 +11,12 @@
   urldate = "2017-01-11"
 },
 
+@misc{web:IDC,
+  title = "Smartphone OS Market Share, 2016 Q3",
+  url = "http://www.idc.com/promo/smartphone-market-share/os;jsessionid=8F02A2368CEAA4D3DB704563C2D92F2C",
+  urldate = "2017-02-04"
+},
+
 @misc{web:bus-doc,
   title = "Business Dictionary",
   url = "http://www.businessdictionary.com/definition/constraint.html",
