--- a/time_tracking.tex
+++ b/time_tracking.tex
@@ -5,8 +5,13 @@
 	\begin{tabularx}{\textwidth}{p{2cm}|X|p{2.5cm}}
 		\textbf{Member} & \textbf{Task} & \textbf{Time (hrs)} \\
 		\hline
-		ab &  &  \\
-		& & \textbf{} \\
+		ab &Introduction and goals                  & 8 \\
+		   &Requirements, Key Drivers, Stakeholders & 9  \\
+		   &Baseline Architecture: Security Tactics & 7  \\
+		   &Software Architecture: Logical view     &12   \\
+		   &Evaluation: Utility tree, scenarios     & 9  \\
+
+		& & \textbf{45} \\
 		\hline
 		ph &  &  \\
 		& & \textbf{} \\
