--- a/patterns/mvc.tex
+++ b/patterns/mvc.tex
@@ -3,20 +3,20 @@
 \section{Model View Controller}
 	The MVC pattern is used to break down the front-end to different pieces each providing different capabilities than the others in order to separate the representation from the logic providing it.
 
-	\subsection{Traceability} 
+	\subsubsection{Traceability} 
 		% related requirements
 		\begin{itemize}
 			\item 1
 		\end{itemize}
 
-	\subsection{Source} \cite{book:design-patterns}
+	\subsubsection{Source} \cite{book:design-patterns}
 
 
-	\subsection{Problem}
+	\subsubsection{Problem}
 
 		Provide an user interface which will allow for different UI capabilities used on different devices with a different purpose. Having mobile devices application which can gives more options to users and stationary units which allow users to log in and out directly at stations.
 
-	\subsection{Solution} 
+	\subsubsection{Solution} 
 
 		Break down the UI logic in three separate pieces, namely the model , view and controller, each having one purpose only. The view is responsible with what the user will see, model with connecting to the databases and the business logic and controller with providing controlling logic and managing what view are presented thus allowing for different user interfaces for different devices based on predefined rules in the controller. 
 
