--- a/patterns/layer.tex
+++ b/patterns/layer.tex
@@ -5,23 +5,23 @@
 	
 	The Layered architecture pattern is based on classes which are designed to work together in a work flow. Having one objective per class creates a modular design which allows for easy change and update of the logic. Each of the classes has one entry and one exit point towards other classes. 
 	
-	\subsection{Traceability} 
+	\subsubsection{Traceability} 
 		% related requirements
 		\begin{itemize}
 			\item 1
 		\end{itemize}
 
-	\subsection{Source} \cite{book:design-patterns}
+	\subsubsection{Source} \cite{book:design-patterns}
 
-	\subsection{Problem}
+	\subsubsection{Problem}
 
 	The entire project is broken down into multiple physical components where the each component is working with one or more other ones. Since the components are separated they need to be adapted in such a way to allow easy changes of logic in each component so that those changes do not break the behaviour of other components.
 
-	\subsection{Solution} 
+	\subsubsection{Solution} 
 
 	Create a layered architecture where each component is a separate entity capable of existing on its own. This breaking down of logic will allow for easy replacement or updates of components without interfering with any other component. 
 
-	\subsection{Rationale} \label{Layers:rationale}
+	\subsubsection{Rationale} \label{Layers:rationale}
 
 	Breaking down the architecture to components provide an impact on the development itself. It is possible to have different teams work and specialise on different components. All the Layers in this architecture are reusable and easily modifiable. 
 
