--- a/baseline_arch.tex
+++ b/baseline_arch.tex
@@ -12,6 +12,9 @@ The use of bluetooth beacons for the system to interact with mobile devices ensu
 
 \item \textbf{Mobile application}
 The implementation of mobile applications for the various selected operating systems that is iOS, Android and Windows ensures the compatibility of the system with almost all mobile devices given that these are the dominant operating systems in the smartphone OS market share according to the International Data Corporation (IDC) \cite{web:IDC}.
+
+\item \textbf{Mobile application backwards compatibility}
+Backwards compatibility ensures that a newer version of the mobile application works with the older version. This would ensure that if a user has not updated to the latest mobile application software version, they can still use the application. This is to be implemented for only one version below the newer version since more than that would make it hard to maintain the application. 
 \end{itemize}
 \subsection{Security Tactics}
 
