--- a/design_decisions.tex
+++ b/design_decisions.tex
@@ -11,7 +11,7 @@ In this section, the major design decisions made about our system are discussed,
 		\textbf{Rationale}    & The use of bluetooth beacons over wi-fi was selected because in addition to it ensuring no compatibility issues, the beacons are also able to identify the position of the connected devices so, this helps with the pricing of the tickets that is between first class and second class if the system can know where a passenger is seated. This also helps the system know when a person leaves the train. \\ \hline
 	\end{tabularx}
 	\caption{Design Decisions - DD1}
-	\label{tbl:uc1}
+	\label{tbl:DD1}
 \end{table}
 
 \begin{table}[H]
@@ -24,7 +24,7 @@ In this section, the major design decisions made about our system are discussed,
 		\textbf{Rationale}    & The use of a mobile application makes this system easy for the users to access and use. The mobile application also ensures the security of the system and the user since both the beacon and the device have to exchange security information before they can start exchanging other information. \\ \hline
 	\end{tabularx}
 	\caption{Design Decisions - DD2}
-	\label{tbl:uc1}
+	\label{tbl:DD2}
 \end{table}
 
 \begin{table}[H]
@@ -37,7 +37,7 @@ In this section, the major design decisions made about our system are discussed,
 		\textbf{Rationale}    & This component ensures there is no data lost during a journey given that the long journeys could reach areas without access to the internet hence losing the connection to the central server and if the local server is not available, it will lead to data loss. \\ \hline
 	\end{tabularx}
 	\caption{Design Decisions - DD3}
-	\label{tbl:uc1}
+	\label{tbl:DD3}
 \end{table}
 
 \begin{table}[H]
@@ -50,7 +50,7 @@ In this section, the major design decisions made about our system are discussed,
 		\textbf{Rationale}    & The central server is the most vital component of the system and without it, the system wouldn't be able to work.  \\ \hline
 	\end{tabularx}
 	\caption{Design Decisions - DD4}
-	\label{tbl:uc1}
+	\label{tbl:DD4}
 \end{table}
 
 \begin{table}[H]
@@ -63,7 +63,7 @@ In this section, the major design decisions made about our system are discussed,
 		\textbf{Rationale}    & This feature ensures that if the application is on and the user has already paid for a ticket, they don't end up paying again through the system. \\ \hline
 	\end{tabularx}
 	\caption{Design Decisions - DD5}
-	\label{tbl:uc1}
+	\label{tbl:DD5}
 \end{table}
 
 \begin{table}[H]
@@ -76,5 +76,5 @@ In this section, the major design decisions made about our system are discussed,
 		\textbf{Rationale}    & This feature ensures the security of the central server as it will have vital data and should not be able to be accessed by any other unknown external systems. \\ \hline
 	\end{tabularx}
 	\caption{Design Decisions - DD6}
-	\label{tbl:uc1}
+	\label{tbl:DD6}
 \end{table}
