--- a/evaluation.tex
+++ b/evaluation.tex
@@ -120,8 +120,7 @@ The system will be in continuous surveliance from the maintenance team, in case 
 
 \section{Key driver verification}
 In this section, we analyse and verify the patterns used for the system according to the key drivers that have been selected by the stakeholders.\\
-To perform this analysis, we place the key drivers and patterns in a table and show how each key driver is affected by the selected pattern \cite{web:patterns-v-QAs} . In order to perform this analysis, a scale is used to show how much a specific key driver is affected where,
-As a reference for some of the weightings depicted in the table, 
+To perform this analysis, we place the key drivers and patterns in a table and show how each key driver is affected by the selected pattern \cite{web:patterns-v-QAs} .  In order to evaluate the patterns a scale ranging from (-- --) to (++) will be used, where -- -- will be the lowest score and ++ the highest as depicted in the table below. 
 
 \begin{table}[H]
     \begin{tabularx}{\textwidth}{p{3.5cm}|>{\centering\arraybackslash}X|>{\centering\arraybackslash}X|>{\centering\arraybackslash}X}
